# foo

./: CMakeLists.txt
foo/: foo.cpp  foo.h
